--- a/index.html
+++ b/index.html
@@ -57,59 +57,66 @@
                                                                 <div class="thumbnail">
                                                                     <img src="assets/assets/product_01.jpg" alt="">
                                                                 </div>
-                                                                <div class="actions">
-                                                                    <ul>
-                                                                        <li><a href=""><i class="ri-star-line"></i></a></li>
-                                                                        <li><a href=""><i class="ri-arrow-left-right-line"></i></a></li>
-                                                                        <li><a href=""><i class="ri-eye-line"></i></a></li>
-                                                                    </ul>
-                                                                </div>
-                                                                <div class="label"><span>-25%</span></div>
-                                                            </div>
-                                                            <div class="dot-info">
-
-                                                                <h2 class="dot-title"><a href="">the Sweather in Tosca</a></h2>
-                                                                <div class="product-price">
-                                                                    <span class="before">$62.00</span>
-                                                                    <span class="current">$45.00</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="item">
-                                                            <div class="dot-image">
-
-                                                                <a href="" class="product-permalink"></a>
-                                                                <div class="thumbnail">
-                                                                    <img src="assets/assets/product_01.jpg" alt="">
-                                                                </div>
-                                                                <div class="actions">
-                                                                    <ul>
-                                                                        <li><a href=""><i class="ri-star-line"></i></a></li>
-                                                                        <li><a href=""><i class="ri-arrow-left-right-line"></i></a></li>
-                                                                        <li><a href=""><i class="ri-eye-line"></i></a></li>
-                                                                    </ul>
-                                                                </div>
-                                                                <div class="label"><span>-25%</span></div>
-                                                            </div>
-                                                            <div class="dot-info">
-
-                                                                <h2 class="dot-title"><a href="">the Sweather in Tosca</a></h2>
-                                                                <div class="product-price">
-                                                                    <span class="before">$62.00</span>
-                                                                    <span class="current">$45.00</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="item">
-                                                            <div class="dot-image">
-
-                                                                <a href="" class="product-permalink"></a>
-                                                                <div class="thumbnail">
-                                                                    <img src="assets/assets/product_01.jpg" alt="">
-                                                                </div>
                                                                 <div class="thumbnail hover">
                                                                     <img src="assets/assets/product_01b.jpg" alt="">
                                                                 </div>
+                                                                <div class="actions">
+                                                                    <ul>
+                                                                        <li><a href=""><i class="ri-star-line"></i></a></li>
+                                                                        <li><a href=""><i class="ri-arrow-left-right-line"></i></a></li>
+                                                                        <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                                    </ul>
+                                                                </div>
+                                                                <div class="label"><span>-25%</span></div>
+                                                            </div>
+                                                            <div class="dot-info">
+
+                                                                <h2 class="dot-title"><a href="">the Sweather in Tosca</a></h2>
+                                                                <div class="product-price">
+                                                                    <span class="before">$62.00</span>
+                                                                    <span class="current">$45.00</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="item">
+                                                            <div class="dot-image">
+
+                                                                <a href="" class="product-permalink"></a>
+                                                                <div class="thumbnail">
+                                                                    <img src="assets/assets/product_02.jpg" alt="">
+                                                                </div>
+                                                                <div class="thumbnail hover">
+                                                                    <img src="assets/assets/product_02b.jpg" alt="">
+                                                                </div>
+                                                                <div class="actions">
+                                                                    <ul>
+                                                                        <li><a href=""><i class="ri-star-line"></i></a></li>
+                                                                        <li><a href=""><i class="ri-arrow-left-right-line"></i></a></li>
+                                                                        <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                                    </ul>
+                                                                </div>
+                                                                <div class="label"><span>-25%</span></div>
+                                                            </div>
+                                                            <div class="dot-info">
+
+                                                                <h2 class="dot-title"><a href="">the Sweather in Tosca</a></h2>
+                                                                <div class="product-price">
+                                                                    <span class="before">$62.00</span>
+                                                                    <span class="current">$45.00</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="item">
+                                                            <div class="dot-image">
+
+                                                                <a href="" class="product-permalink"></a>
+                                                                <div class="thumbnail">
+                                                                    <img src="assets/assets/product_03.jpg" alt="">
+                                                                </div>
+                                                                <div class="thumbnail hover">
+                                                                    <img src="assets/assets/product_03b.jpg" alt="">
+                                                                </div>
+                                                                
                                                                 <div class="actions">
                                                                     <ul>
                                                                         <li><a href=""><i class="ri-star-line"></i></a></li>
@@ -133,7 +140,39 @@
 
 
                                                 </div>
-                                                <div class="links"></div>
+                                                <div class="links">
+
+                                                    <div class="list-block">
+                                                        <h3 class="dot-title">Apparel</h3>
+                                                        <ul>
+                                                            <li><a href="#">Prada</a></li>
+                                                            <li><a href="#"></a>Gucci</li>
+                                                            <li><a href="#"></a>Channel</li>
+                                                            <li><a href="#"></a>Zara</li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="list-block">
+                                                        <h3 class="dot-title">Shoes</h3>
+                                                        <ul>
+                                                            <li><a href="#">Adidas</a></li>
+                                                            <li><a href="#"></a>Nike</li>
+                                                            <li><a href="#"></a>Puma</li>
+                                                            <li><a href="#"></a>Gucci</li>
+                                                            <li><a href="#"></a>Dolce & Gabbana</li>
+                                                            <li><a href="#"></a>Louis Vuitton</li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="list-block">
+                                                        <h3 class="dot-title">Perfumes</h3>
+                                                        <ul>
+                                                            <li><a href="#">Armani</a></li>
+                                                            <li><a href="#"></a>Dior</li>
+                                                            <li><a href="#"></a>Channel</li>
+                                                            <li><a href="#"></a>Zara</li>
+                                                            <li><a href="#"></a>Hugo Boss</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -160,14 +199,14 @@
                             </ul>
                          </nav>
 
-                         <div class="branding"><a href="">Theshop</a></div>
+                         <div class="branding"><a href="">Eirloom</a></div>
 
 
                          </div>
                         <div class="header-right">
                             <div class="list-inline">
                                 <ul>
-                                    <li><a href=""><i class="ri-search-line"></i></a></li>
+                                    <li><a href="" trigger-button data-target="search-float"><i class="ri-search-line"></i></a></li>
                                     <li><a href=""><span class="item-floating">0</span><i class="ri-shopping-bag-line"></i></a></li>
                                 </ul>
                             </div>
@@ -177,12 +216,22 @@
                         </div>
                     </div>
                 </div>
+                <div id="search-float" class="search-float">
+                    <div class="container wide">
+                        <form action="" class="search">
+
+                            <i class="ri-search-line"></i>
+                            <input type="search" class="input" id="" placeholder="Search Products">
+                            <i class="ri-close-line" close-button></i>
+                        </form>
+                    </div>
+                </div>
             </div>
         </header>
         <main></main>
         <footer></footer>
     </div>
-
+<div class="overlay" data-overlay></div>
     <script src="script.js"></script>
 </body>
 </html>
