page-cart commit

--- a/page-cart.html
+++ b/page-cart.html
@@ -415,7 +415,7 @@
                                 </div>
                                 <div class="sub-terms">
                                     <input type="checkbox" class="checker" id="terms">
-                                <label for="terms">I agree t0 <a href="" class="grey-link">Terms & Conditions</a></label>
+                                <label for="terms">I agree to<a href="" class="grey-link"> Terms & Conditions</a></label>
                                 </div>
                                <div class="button">
                                 <a href="" class="secondary-btn">Checkout</a>
