--- a/page-checkout.html
+++ b/page-checkout.html
@@ -667,7 +667,7 @@
     </div>
 </div>
 </div>
--<div id="data-review" class="data-popup d-review">
+<div id="data-review" class="data-popup d-review">
     <div class="wrap">
         <div class="data-content">
         <a href="#0" class="close-trigger" close-button><i class="ri-close-line"></i></a>
